--- a/p.html
+++ b/p.html
@@ -9,34 +9,49 @@
 </head>
 
 <body>
-    <center>
-        <div class="container">
-            <header class="row">
-                <div class="col-xs-3 ">
-                    <img class="img-responsive" src="download.png" /></a>
-                </div>
-                <div class="col-xs-9 text-uppercase text-right">
-                    <h1>Parul singla</h1>
-                    <h3>Front-End Ninja</h3>
 
-                </div>
-            </header>
-        </div>
+    <div class="container">
+        <header class="row">
+            <div class="col-xs-3 ">
+                <img class="img-responsive" src="download.png" /></a>
+            </div>
+            <div class="col-xs-9 text-uppercase text-right">
+                <h1>Parul singla</h1>
+                <h3>Front-End Ninja</h3>
+
+            </div>
+        </header>
+
         <hr>
+        <div class="container">
+            <div class="row">
+                <!-- Jumbotron -->
+                <div class="col-md-12">
+                    <img class="hero" src="d1.jpg" alt="Code" />
+                </div>
+            </div>
+        </div>
 
-        <img class="img-responsive" src="d1.jpg" /></center>
-    <div class="container">
-        <p> Parul Singla
-            <br> 1610991608
-            <br> Currently pursuing B.tech
-            <br> Enrolled in CSE-4th semester
-            <br> Hobbies: Dance,Content Writing and Sports
-            <br> Interested in: Web Development
-            <br> Achievements : Part of MUN society, Toastmasters and NSS.</p>
-    </div>
-    <div class="container">
-        <div class="col-md-12">
-            <h2>Featured Work </h2>
+        <!--<img class="img-responsive" src="d1.jpg" />-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <p> Parul Singla
+                        <br> 1610991608
+                        <br> Currently pursuing B.tech
+                        <br> Enrolled in CSE-4th semester
+                        <br> Hobbies: Dance,Content Writing and Sports
+                        <br> Interested in: Web Development
+                        <br> Achievements : Part of MUN society, Toastmasters and NSS.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Featured Work </h2>
+                </div>
+            </div>
         </div>
         <div class="container">
             <div class="row">
@@ -55,7 +70,9 @@
                 </div>
             </div>
         </div>
+
     </div>
+
 </body>
 
 </html>
